<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5sp">

    <TextView android:id="@+id/playerNameText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/playerName"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textAlignment="center"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/playerScoreButtonLayout" />

    <LinearLayout android:id="@+id/playerScoreButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/playerNameText"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerScoreDownButton"
            android:src="@android:drawable/ic_media_play"
            android:scaleX="-1"
            android:contentDescription="@string/decrease_score" />

        <TextView android:id="@+id/playerScoreText"
            android:layout_width="64sp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="25sp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerScoreUpButton"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/increase_score" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>